--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,33 @@
 version: '3.5'
 services:
   api1: &app
+    container_name: marcosisocram-kotlin-api1
     image: marcosisocram/rinha-2024-q1-kotlin:undertow-latest
     hostname: api1
     network_mode: "host"
     depends_on:
       - db
+      - redis
     expose:
       - "8180"
-    command: ["-Dorg.slf4j.simpleLogger.defaultLogLevel=debug", "-Dlogger.level=debug"]
+    #command: ["-Dorg.slf4j.simpleLogger.defaultLogLevel=debug", "-Dlogger.level=debug"]
     environment:
       - PORT=8180
       - DB_URL=jdbc:h2:tcp://localhost:9092/~/rinha
       - DB_USER=sa
       - DB_PASSWORD=sa
-      - DB_POOLSIZE=10
-      - DB_CREATE=false
-      - BACKLOG=2000
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: '0.15'
-#          memory: "70MB"
+      - DB_POOLSIZE=4
+      - DB_CREATE_TRANSACAO=true
+      - REDIS_URL=redis://127.0.0.1:6379
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2375'
+          memory: "90MB"
 
   api2: # API - Instância 02
     <<: *app
+    container_name: marcosisocram-kotlin-api2
     expose:
       - "8280"
     environment:
@@ -32,43 +35,46 @@ services:
       - DB_URL=jdbc:h2:tcp://localhost:9092/~/rinha
       - DB_USER=sa
       - DB_PASSWORD=sa
-      - DB_POOLSIZE=10
-      - DB_CREATE=true
-      - BACKLOG=2000
+      - DB_POOLSIZE=4
+      - DB_CREATE_CLIENTE=true
+      - REDIS_URL=redis://127.0.0.1:6379
     hostname: api2
 
   db:
+    container_name: marcosisocram-kotlin-db
     image: marcosisocram/rinha-h2:latest
-    #    image: gasparbarancelli/rinha-backend-database:latest
-    #    hostname: db
     network_mode: "host"
-    #    environment:
-    #      - POSTGRES_PASSWORD=rinha-de-bK
-    #      - POSTGRES_USER=user
-    #      - POSTGRES_DB=postgres
-    #      - PGPORT=5433
-    #    volumes:
-    #      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    #      - ./postgresql.conf:/docker-entrypoint-initdb.d/postgresql.conf
-    #    healthcheck:
-    #      test: [ "CMD-SHELL", "pg_isready" ]
-    #      interval: 5s
-    #      timeout: 5s
-    #      retries: 5
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: '0.7'
-#          memory: '250MB'
+    deploy:
+      resources:
+        limits:
+          cpus: '0.6'
+          memory: '230MB'
 
-  balance:
-    container_name: marcosisocram-balancinha
-    image: marcosisocram/balancinha:latest
-    restart: on-failure
+  haproxy:
+    container_name: marcosisocram-kotlin-haproxy
+    image: haproxy:2.9.4
+    volumes:
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     depends_on:
       - api1
       - api2
     expose:
       - "9999"
     network_mode: "host"
-    command: [ "/app/balance", "9999", "localhost:8180", "localhost:8280" ]
+    deploy:
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: "110MB"
+
+  redis:
+    container_name: marcosisocram-kotlin-redis
+    image: 'bitnami/redis:latest'
+    network_mode: "host"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: "40MB"
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
