--- a/pom.xml
+++ b/pom.xml
@@ -30,26 +30,26 @@
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
-            <version>2.3.9.Final</version>
+            <version>2.3.12.Final</version>
         </dependency>
 
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-servlet</artifactId>
-            <version>2.3.9.Final</version>
+            <version>2.3.12.Final</version>
         </dependency>
 
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-websockets-jsr</artifactId>
-            <version>2.3.9.Final</version>
+            <version>2.3.12.Final</version>
         </dependency>
 
         <!--Coisas do Kotlin-->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
-            <version>1.9.0</version>
+            <version>1.9.22</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -91,6 +91,14 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.2.224</version>
+        </dependency>
+
+
+        <!--Coisas do lock-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.27.0</version>
         </dependency>
 
 
@@ -149,7 +157,7 @@
                     <skip>false</skip>
                     <imageName>app</imageName>
                     <buildArgs>
-<!--                        <buildArg>&#45;&#45;gc=G1</buildArg>-->
+                        <buildArg>--enable-url-protocols=http</buildArg>
                         <mainClass>com.marcosisocram.MainKt</mainClass>
                     </buildArgs>
                 </configuration>
